5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4422/executions/1785_3137.log
== TEST (2019-05-30 11:08:48) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))

i = 0
while(i > size(v)):
	m = log((exp(v[0]) + exp(v[i]))/exp(i))
	i = i + 1
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:09:21) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))

i = 0
while(i > size(v)):
	m = log((exp(v[0]) + exp(v[i]))/exp(i))
	i = i + 1
	print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:10:10) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))

i = 0
m = 0
while(i > size(v)):
	m = log((exp(v[0]) + exp(v[i]))/exp(i))
	i = i + 1
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:11:08) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))

i = 0

while(i != size(v)):
	m = log((exp(v[0]) + exp(v[i]))/exp(i))
	i = i + 1
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:11:41) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))

i = 0

while(i != size(v)):
	m = log((exp(v[0]) + exp(v[i]))/exp(i))
	i = i + 1
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:14:39) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))

i = 0

while(i < size(v)):
	m = log((exp(v[0])/exp(v[i]))+ exp(v[i])/exp(v[i]) + exp(v[i - 1])/exp(v[i]))
	i = i + 1
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:14:57) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))

i = 0

while(i < size(v)):
	m = log((exp(v[0])/exp(v[i]))+ exp(v[i])/exp(v[i]) + exp(v[i - 1])/exp(v[i]))
	i = i + 1
print(round(m, 2))
	
	
-- EXECUTION TIME:
0.493613
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
1.36
---- user output:
0.32
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
1.0
---- user output:
0.29
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
0.55
---- user output:
0.33
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:14:59) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))

i = 0

while(i < size(v)):
	m = log((exp(v[0])/exp(v[i]))+ exp(v[i])/exp(v[i]) + exp(v[i - 1])/exp(v[i]))
	i = i + 1
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:15:22) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))

i = 0

while(i < size(v)):
	m = log((exp(v[0])/exp(v[0]))+ exp(v[i])/exp(v[i]) + exp(v[i - 1])/exp(v[i]))
	i = i + 1
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:15:45) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))

i = 0

while(i < size(v)):
	m = log((exp(v[0])/exp(v[0]))+ exp(v[i])/exp(v[i]) + exp(v[i - 1])/exp(v[i - 1]))
	i = i + 1
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:16:48) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))

i = 0

while(i == size(v)):
	m = log((exp(v[0])/exp(v[0]))+ exp(v[i])/exp(v[i]) + exp(v[i - 1])/exp(v[i - 1]))
	i = i + 1
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:17:15) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))

i = 0

while(i >= size(v)):
	m = log((exp(v[0])/exp(v[0]))+ exp(v[i])/exp(v[i]) + exp(v[i - 1])/exp(v[i - 1]))
	i = i + 1
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:22:27) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))

tamanho = size(v)
s = 0.0
i = 0

while(i > tamanho):
	m = log((exp(v[0])/exp(size(v)))+ exp(v[i])/exp(size(v)) + exp(v[size(v) - 1])/exp(v[size(v) - 1]))
	i = i + 1
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:22:42) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))

tamanho = size(v)
s = 0.0
i = 0

while(i < tamanho):
	m = log((exp(v[0])/exp(size(v)))+ exp(v[i])/exp(size(v)) + exp(v[size(v) - 1])/exp(v[size(v) - 1]))
	i = i + 1
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:23:22) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))

tamanho = size(v)
s = 0.0
i = 0

while(i < tamanho):
	m = log((exp(v[0])/exp(size(v)))+ exp(v[i])/exp(size(v))
	i = i + 1
print(round(m, 2))
	
	
-- ERROR:
File "XXXX", line 10
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:23:39) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))

tamanho = size(v)
s = 0.0
i = 0

while(i < tamanho):
	m = log((exp(v[0])/exp(size(v)))+ exp(v[i])/exp(size(v))
	i = i + 1
print(round(m, 2))
	
	
-- ERROR:
File "XXXX", line 10
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:23:44) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))

tamanho = size(v)
s = 0.0
i = 0

while(i < tamanho):
	m = log((exp(v[0])/exp(size(v)))+ exp(v[i])/exp(size(v)))
	i = i + 1
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:25:08) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))

t = size(v)
i = 0

while(i < t):
	m = log((exp(v[0])/exp(size(v)))+ exp(v[i])/exp(size(v)))
	i = i + 1
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:25:45) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))

t = size(v)
i = 0

while(i < t):
	m = log((exp(v[0])/exp(t))+ exp(v[i])/exp(t))
	i = i + 1
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:26:06) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))

t = size(v)
i = 0

while(i < t):
	m = log((exp(v[0])/exp(t))+ exp(v[i])/exp(t)))
	i = i + 1
print(round(m, 2))
	
	
-- ERROR:
File "XXXX", line 8
    m = log((exp(v[0])/exp(t))+ exp(v[i])/exp(t)))
                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:27:01) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))

t = size(v)
i = 0

while(i < t):
	m = log((exp(v[0]) + exp(v[i]))/exp(t))
	i = i + 1
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:27:17) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))

t = size(v)
i = 0

while(i < t):
	m = log((exp(v[0]) + exp(v[i]))/exp(t))
	i = i + 1
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:27:23) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))

t = size(v)
i = 0

while(i < t):
	m = log((exp(v[0]) + exp(v[i]))/exp(t))
	i = i + 1
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:28:58) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))

t = size(v)
i = 0

while(i < t):
	m = log((exp(v[0]) + exp(v[i]))/exp(t) + exp(t-1)/(exp(t)))
	i = i + 1
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:29:16) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))

t = size(v)
i = 0

while(i < t):
	m = log((exp(v[0]) + exp(v[i]))/exp(t) + exp(t-1)/(exp(t)))
i = i + 1
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:29:56) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))

t = size(v)
i = 0
m = log((exp(v[0]) + exp(v[i]))/exp(t) + exp(t-1)/(exp(t)))
i = i + 1
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:30:25) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))

t = size(v)
i = 0
m = log((exp(v[0]) + exp(v[i]))/exp(t) + exp(v[t-1])/(exp(t)))
i = i + 1
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:31:07) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))

t = size(v)
i = 0

while(i<t):
	m = log((exp(v[0]) + exp(v[i]))/exp(t) + exp(v[t-1])/(exp(t)))
	i = i + 1
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:31:50) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))

t = size(v)
i = 0

while(i<t):
	i = i + 1
	m = log((exp(v[0]) + exp(v[i]))/exp(t) + exp(v[t-1])/(exp(t)))
	i = i + 1
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:32:04) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))

t = size(v)
i = 0

while(i<t):
	i = i + 1
	m = log((exp(v[0]) + exp(v[i]))/exp(t) + exp(v[t-1])/(exp(t)))
	
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:32:18) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))

t = size(v)
i = 0

while(i<t):
	i = i + 1
	m = log((exp(v[0]) + exp(v[i]))/exp(t) + exp(v[t-1])/(exp(t)))
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:33:26) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))

t = size(v)
i = 1

while(i<t):
	m = log((exp(v[0]) + exp(v[i]))/exp(t) + exp(v[t-1])/(exp(t)))
	i = i + 1
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:34:01) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 1
while(i<t):
	m = log((exp(v[0]) + exp(v[i]))/exp(t) + exp(v[t-1])/(exp(t)))
	i = i + 1
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:34:14) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 2
while(i<t):
	m = log((exp(v[0]) + exp(v[i]))/exp(t) + exp(v[t-1])/(exp(t)))
	i = i + 1
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:34:38) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 0
while(i!=t):
	m = log((exp(v[0]) + exp(v[i]))/exp(t) + exp(v[t-1])/(exp(t)))
	i = i + 1
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:35:54) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 1
while(i!=t):
	m = log((exp(v[0]) + exp(v[i+1]))/exp(t) + exp(v[t-1])/(exp(t)))
	i = i + 1
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:36:59) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 1
while(i<t):
	m = log((exp(v[0]) + exp(v[i]))/exp(t))
	i = i + 1
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:37:24) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 1
while(i<t):
	m = log((exp(v[0]) + exp(v[i]))/exp(t))
	i = i + 1
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:38:17) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 1
while(i<t):
	m = log((exp(v[i]) + exp(v[t - 1]))/exp(t))
	i = i + 1
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:38:54) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 1
while(i<t):
	m = log((exp(v[i])/exp(t) + exp(v[t - 1]))/exp(t))
	i = i + 1
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:41:32) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 1
c = exp(v[i + 1])
while(i<t):
	m = log((exp(v[0]) + exp(v[i]) + c)/exp(t))
	i = i + 1
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:41:59) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 1
c = exp(v[i + 1])
while(i<t):
	m = log((exp(v[0]) + exp(v[i]) + c)/exp(t))
	i = i + 1
print(round(m, 2))
	
	
-- EXECUTION TIME:
0.495658
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
1.36
---- user output:
0.92
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
1.0
---- user output:
0.64
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
0.55
---- user output:
0.24
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:42:00) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 1
c = exp(v[i + 1])
while(i<t):
	m = log((exp(v[0]) + exp(v[i]) + c)/exp(t))
	i = i + 1
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:42:14) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 1
c = exp(v[i + 1])
while(i<t):
	m = log((exp(v[0]) + exp(v[i]) + c)/exp(t)) + 0.3
	i = i + 1
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:42:42) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 1
c = exp(v[i + 1])
while(i<t):
	m = log((exp(v[0]) + exp(v[i]) + c)/exp(t))
	i = i + 1
print(round(m + 0.3, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:42:56) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 1
c = exp(v[i + 1])
while(i<t):
	m = log((exp(v[0]) + exp(v[i]) + c)/exp(t))
	i = i + 1
print(round(m + 0.03, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:43:08) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 1
c = exp(v[i + 1])
while(i<t):
	m = log((exp(v[0]) + exp(v[i]) + c)/exp(t))
	i = i + 1
print(round(m + 0.05, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:43:15) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 1
c = exp(v[i + 1])
while(i<t):
	m = log((exp(v[0]) + exp(v[i]) + c)/exp(t))
	i = i + 1
print(round(m + 0.05, 2))
	
	
-- EXECUTION TIME:
0.384386
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
1.36
---- user output:
0.97
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
1.0
---- user output:
0.69
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
0.55
---- user output:
0.29
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:43:15) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 1
c = exp(v[i + 1])
while(i<t):
	m = log((exp(v[0]) + exp(v[i]) + c)/exp(t))
	i = i + 1
print(round(m + 0.05, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:43:36) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 0
c = exp(v[i + 1])
while(i<t):
	m = log((exp(v[0]) + exp(v[i]) + c)/exp(t))
	i = i + 1
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:43:53) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 2
c = exp(v[i + 1])
while(i<t):
	m = log((exp(v[0]) + exp(v[i]) + c)/exp(t))
	i = i + 1
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:43:59) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 2
c = exp(v[i + 1])
while(i<t):
	m = log((exp(v[0]) + exp(v[i]) + c)/exp(t))
	i = i + 1
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:45:38) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 1
c = exp(v[i + 1])

while(i<t):
	m = log((exp(v[0]) + exp(v[i]) + c)/exp(t))
	i = i + 1
	c = exp(v[i + 1])
print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:45:59) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 1
c = exp(v[i + 1])

while(i<t):
	m = log((exp(v[0]) + exp(v[i]) + c)/exp(t))
	i = i + 1

print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:47:05) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 1
c = exp(v[i + 1])

while(i<t):
	m = log((exp(v[0]) + exp(v[i]) + c)/exp(t))
	i = i + 1

print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:48:06) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 1
c = exp(v[i + 1])

while(i<t):
	m = log((exp(v[0]) + exp(v[i]) + c)/exp(v))
	i = i + 1

print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:48:52) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 1
c = exp(v[i + 1])

while(i<t):
	m = log((exp(v[0]) + exp(v[i]) + c)/exp(t))
	i = i + 1

print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:49:17) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 1
c = exp(v[i + 1])

while(i<t):
	m = log((exp(v[0]) + exp(v[i]) + c)/exp(sum(v)))
	i = i + 1

print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:49:33) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 1
c = exp(v[i + 1])

while(i<t):
	m = log((exp(v[0]) + exp(v[i]) + c)/exp(t))
	i = i + 1

print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:50:48) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 1
c = exp(v[i + 1])

while(i<t):
	m = log((exp(v[0]) + exp(v[i]) + c + c)/exp(t))
	i = i + 1

print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:51:48) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 1
c = exp(v[i + 1])

while(i<t):
	m = log((exp(v[0]) + exp(v[i]) + c)/exp(t))
	i = i + 1

print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:51:55) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 1
c = exp(v[i + 1])

while(i<t):
	m = log((exp(v[0]) + exp(v[i]) + c)/exp(t))
	i = i + 1

print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:51:59) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 1
c = exp(v[i + 1])

while(i<t):
	m = log((exp(v[0]) + exp(v[i]) + c)/exp(t))
	i = i + 1

print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:52:31) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 1
c = exp(v[i + 1])

while(i<t):
	m = log((exp(v[0]) + exp(v[i]) + c)/exp(t))
	i = i + 1
	print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:52:44) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 1
c = exp(v[i + 1])

while(i<t):
	m = log((exp(v[0]) + exp(v[i]) + c)/exp(t))
	i = i + 1
	print(round(m, 2))
	
	
-- EXECUTION TIME:
0.549603
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
1.36
---- user output:
-2.69
-2.34
-1.75
-0.96
-0.05
0.92
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
1.0
---- user output:
-2.33
-1.95
-1.29
-0.38
0.64
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
0.55
---- user output:
-1.49
-1.14
-0.55
0.24
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:52:50) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 1
c = exp(v[i + 1])

while(i<t):
	m = log((exp(v[0]) + exp(v[i]) + c)/exp(t))
	i = i + 1
	print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:53:06) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 1
c = exp(v[i + 1])

while(i<t):
	m = log((exp(v[0]) + exp(v[i]))/exp(t))
	i = i + 1
	print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:53:18) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 1
c = exp(v[i + 1])

while(i<t):
	m = log((exp(v[0]) + exp(v[i]))/exp(t))
	i = i + 1
	print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:53:41) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 1
c = exp(v[i + 1])

while(i<=t):
	m = log((exp(v[0]) + exp(v[i]) + c)/exp(t))
	i = i + 1
	print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:53:57) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 1
c = exp(v[i + 1])

while(i<t):
	m = log((exp(v[0]) + exp(v[i]) + c)/exp(t))
	i = i + 1
	print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:54:18) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 1
c = exp(v[i + 1])

while(i<t):
	m = log((exp(v[0]) + exp(v[i]) + exp(v[i + 1]))/exp(t))
	i = i + 1
	print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:54:32) 
-- CODE:
from numpy import *
v = array(eval(input("numeros reais: ")))
t = size(v)
i = 1

while(i<t):
	m = log((exp(v[0]) + exp(v[i]) + exp(v[i + 1]))/exp(t))
	i = i + 1
	print(round(m, 2))
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
